libreoffice (1:6.4.0~rc1-6) UNRELEASED; urgency=medium

  * debian/control.in, debian/control.ure.in:
    - fix typo: s/java:Depednds/java:Depends/g

 -- Rene Engelhard <rene@debian.org>  Thu, 02 Jan 2020 02:30:03 +0100

libreoffice (1:6.4.0~rc1-5) unstable; urgency=medium

  * debian/control.ure.in:
    - fix Breaks:/Replaces: on ure, it has no epoch... (closes: #947853)

 -- Rene Engelhard <rene@debian.org>  Tue, 31 Dec 2019 18:41:06 +0000

libreoffice (1:6.4.0~rc1-4) unstable; urgency=medium

  * debian/rules:
    - limit parallelism for running the tests to 1 so one can see
      directly which test fails/hangs; keep the second run in case
      of a failure nevertheless for flaky tests...
    - disable coinmp for now, tests hang

 -- Rene Engelhard <rene@debian.org>  Mon, 30 Dec 2019 16:54:09 +0100

libreoffice (1:6.4.0~rc1-3) unstable; urgency=medium

  readd test fixes which somewow got lost in preparation of -2:

  * debian/tests/control:
    - smoktest: add missing -nogui and add missing libreoffice-base-nogui
      to Depends:; but use calc and core since the test actually seems to want
      to use something from it 
    - junit: use the "GUI" packages
  * debian/control*in:
    - add more Breaks:/Replaces: for the new split-out Java packages (and
      libreoffice-smoketest-data) (closes: #947446)
  * debian/libreoffice-common.doc-base: also add Files:

 -- Rene Engelhard <rene@debian.org>  Fri, 27 Dec 2019 10:51:35 +0100

libreoffice (1:6.4.0~rc1-2) unstable; urgency=medium

  * debian/rules, debian/control*in:
    - make -nogui variant less confusing and create them for all "UI"
      packages (also saves some space since some (not needed for nogui)
      will be gone from -nogui)
  * debian/rules, debian/libreoffice-calc-nogui.lintian-overrides:
    - remove lib*uilo.so and *.desktop from *-nogui
  * debian/tests/control:
    - fix typo
    - use the new -nogui packages created above in the smoketest test
