@@ -1036,10 +1036,10 @@ Description: interface between Python and the LibreOffice Access2Base library
 
 Package: libunoil-java
 Section: java
-Depends: ${java:Depednds}, ${misc:Depends}
+Depends: ${java:Depends}, ${misc:Depends}
 Architecture: all
-Replaces: libreoffice-java-common (<< 1:6.4.0~beta1-1)
-Breaks: libreoffice-java-common (<< 1:6.4.0~beta1-1)
+Replaces: libreoffice-java-common (<< 1:6.4.0~rc1-6)
+Breaks: libreoffice-java-common (<< 1:6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- UNO interface library
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -4432,9 +4432,9 @@ Description: LibreOffice UNO runtime environment
 Package: libjuh-java
 Architecture: all
 Section: java
-Depends: ${java:Depednds}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Depends: ${java:Depends}, ${misc:Depends}
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4444,9 +4444,9 @@ Description: LibreOffice UNO runtime environment -- Java Uno helper
 Package: libridl-java
 Architecture: all
 Section: java
-Depends: ${java:Depednds}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Depends: ${java:Depends}, ${misc:Depends}
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- base types and types access library for the Java Uno typesystem
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4457,9 +4457,9 @@ Description: LibreOffice UNO runtime environment -- base types and types access 
 Package: libunoloader-java
 Architecture: all
 Section: java
-Depends: ${java:Depednds}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Depends: ${java:Depends}, ${misc:Depends}
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -4469,9 +4469,9 @@ Description: LibreOffice UNO runtime environment -- (Java) UNO loader
 Package: libjurt-java
 Architecture: all
 Section: java
-Depends: ${java:Depednds}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Depends: ${java:Depends}, ${misc:Depends}
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
