@@ -814,8 +814,8 @@ Package: libofficebean-java
 Section: java
 Depends: ${java:Depends}, ${misc:Depends}
 Architecture: all
-Replaces: libreoffice-officebean (<< 1:6.4.0~beta1-1)
-Breaks: libreoffice-officebean (<< 1:6.4.0~beta1-1)
+Replaces: libreoffice-officebean (<< 1:6.4.0~rc1-6)
+Breaks: libreoffice-officebean (<< 1:6.4.0~rc1-6)
 Description: A generic Java Bean wrapper for LibreOffice components
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
