@@ -132,8 +132,8 @@ Package: libjuh-java
 Architecture: all
 Section: java
 Depends: ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -144,8 +144,8 @@ Package: libridl-java
 Architecture: all
 Section: java
 Depends: ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- base types and types access library for the Java Uno typesystem
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -157,8 +157,8 @@ Package: libunoloader-java
 Architecture: all
 Section: java
 Depends: ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
@@ -169,8 +169,8 @@ Package: libjurt-java
 Architecture: all
 Section: java
 Depends: ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~beta1-1)
-Breaks: ure (<< 6.4.0~beta1-1)
+Replaces: ure (<< 6.4.0~rc1-6)
+Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
