@@ -2,6 +2,11 @@ libreoffice (1:6.4.0~rc1-6) UNRELEASED; urgency=medium
 
   * debian/control.in, debian/control.ure.in:
     - fix typo: s/java:Depednds/java:Depends/g
+  * debian/rules:
+    - fix the URE/unoil/officebean jar splitout to actually work as
+      expected (closes: #947909)
+  * debian/control.in, debian/control.ure.in:
+    - update Breaks:/Replaces:
 
  -- Rene Engelhard <rene@debian.org>  Thu, 02 Jan 2020 02:30:03 +0100
 
